debug compute_a, reorganized multiple files

--- a/notebooks/0.0-saf-introduction-by-example.ipynb
+++ b/notebooks/0.0-saf-introduction-by-example.ipynb
@@ -2,16 +2,24 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg\n"
+     ]
+    }
+   ],
    "source": [
     "%cd .."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -40,62 +48,6 @@
    "source": [
     "dataset = TUDataset(root='/tmp/ENZYMES', name='ENZYMES', use_node_attr=True)\n",
     "loader = DataLoader(dataset, batch_size=32, shuffle=True)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "DataBatch(edge_index=[2, 3990], x=[1041, 21], y=[32], batch=[1041], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3438], x=[990, 21], y=[32], batch=[990], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4456], x=[1160, 21], y=[32], batch=[1160], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4230], x=[1102, 21], y=[32], batch=[1102], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3646], x=[929, 21], y=[32], batch=[929], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4168], x=[1098, 21], y=[32], batch=[1098], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3956], x=[1047, 21], y=[32], batch=[1047], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4336], x=[1098, 21], y=[32], batch=[1098], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4148], x=[1098, 21], y=[32], batch=[1098], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3682], x=[961, 21], y=[32], batch=[961], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4212], x=[1179, 21], y=[32], batch=[1179], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4104], x=[1071, 21], y=[32], batch=[1071], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3774], x=[988, 21], y=[32], batch=[988], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3544], x=[915, 21], y=[32], batch=[915], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 4224], x=[1085, 21], y=[32], batch=[1085], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3920], x=[1039, 21], y=[32], batch=[1039], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3598], x=[914, 21], y=[32], batch=[914], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3984], x=[1023, 21], y=[32], batch=[1023], ptr=[33])\n",
-      "32\n",
-      "DataBatch(edge_index=[2, 3154], x=[842, 21], y=[24], batch=[842], ptr=[25])\n",
-      "24\n"
-     ]
-    }
-   ],
-   "source": [
-    "for batch in loader:\n",
-    "    print(batch)\n",
-    "    print(batch.num_graphs)"
    ]
   }
  ],
