--- a/notebooks/0.1-saf-torch-geometric-playground.ipynb
+++ b/notebooks/0.1-saf-torch-geometric-playground.ipynb
@@ -34,82 +34,99 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from src.models.dense import NN0\n",
-    "from src.models.dense import NN1\n",
-    "from src.models.gcn import GCN0\n",
-    "\n",
-    "from src.models.train_model import train0\n",
-    "from src.models.train_model import train1\n",
-    "from src.models.train_model import compute_a\n",
-    "\n",
-    "from src.models.train_model import set_masks\n",
-    "from src.models.train_model import random_splits\n",
-    "from src.models.train_model import propagate\n",
-    "\n",
-    "from src.models.evaluate_model import evaluate0\n",
-    "\n",
     "import torch\n",
-    "import torch.nn.functional as F\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "from torch_geometric.data import Data\n",
-    "from torch_geometric.loader import DataLoader\n",
-    "from torch_geometric.datasets import Planetoid\n",
-    "\n",
-    "from sklearn.manifold import TSNE"
+    "from src.models.train_model import compute_a\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
-    "\n",
-    "dataset = Planetoid(root='data/Planetoid', name='Cora')\n",
-    "data = dataset[0].to(device)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.753"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[1., 2., 3.],\n",
+      "        [0., 0., 0.],\n",
+      "        [2., 3., 2.],\n",
+      "        [4., 3., 2.]])\n"
+     ]
     }
    ],
    "source": [
+    "x = torch.tensor([\n",
+    "    [1,2,3],\n",
+    "    [0,0,0],\n",
+    "    [2,3,2],\n",
+    "    [4,3,2]],\n",
+    "    dtype=torch.float)\n",
     "\n",
-    "gcn_model = GCN0(num_node_features=dataset.num_node_features,\n",
-    "                 num_classes=dataset.num_classes) \\\n",
-    "                .to(device)\n",
+    "edge_index = torch.tensor([\n",
+    "    [0,1],\n",
+    "    [0,2],\n",
+    "    [0,3],\n",
+    "    [2,3],])\n",
+    "data = Data(x=x, edge_index=edge_index.T)\n",
     "\n",
-    "A = compute_a(data)\n",
-    "D = torch.diag(A.sum(dim=0))\n",
-    "A_hat = D.inverse()@A\n",
-    "\n",
-    "# Changing mu doesn't really make the model eny better\n",
-    "# When it is set to >0.1, the model gets much worse\n",
-    "gcn_model = train1(gcn_model, data, num_epochs=10, mu=0.1)\n",
-    "\n",
-    "evaluate0(gcn_model, data)"
+    "print(data.x)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0., 1., 1., 1.],\n",
+      "        [1., 0., 0., 0.],\n",
+      "        [1., 0., 0., 1.],\n",
+      "        [1., 0., 1., 0.]])\n",
+      "-----------------------------\n",
+      "tensor([[1., 2., 3.],\n",
+      "        [0., 0., 0.],\n",
+      "        [2., 3., 2.],\n",
+      "        [4., 3., 2.]])\n",
+      "tensor([[2.0000, 2.0000, 1.3333],\n",
+      "        [1.0000, 2.0000, 3.0000],\n",
+      "        [2.5000, 2.5000, 2.5000],\n",
+      "        [1.5000, 2.5000, 2.5000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "A = compute_a(data)\n",
+    "D = torch.diag(A.sum(dim=0))\n",
+    "A_hat = D.inverse()@A\n",
+    "print(A)\n",
+    "print('-----------------------------')\n",
+    "print(data.x)\n",
+    "print((A_hat@data.x))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.0000, 0.3333, 0.3333, 0.3333],\n",
+      "        [1.0000, 0.0000, 0.0000, 0.0000],\n",
+      "        [0.5000, 0.0000, 0.0000, 0.5000],\n",
+      "        [0.5000, 0.0000, 0.5000, 0.0000]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(A_hat)"
+   ]
   }
  ],
  "metadata": {
