delete ghost data folder, add some documentation to some functions

--- a/notebooks/1.2-saf-reg-loss-for-train-size.ipynb
+++ b/notebooks/1.2-saf-reg-loss-for-train-size.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +42,6 @@
     "\n",
     "from src.models.train_model import train0\n",
     "from src.models.train_model import train1\n",
-    "from src.models.train_model import train2\n",
-    "from src.models.train_model import set_masks\n",
     "from src.models.train_model import random_splits\n",
     "\n",
     "from src.models.evaluate_model import evaluate0\n",
@@ -61,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -87,7 +85,6 @@
     }
    ],
    "source": [
-    "import random\n",
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "dataset = Planetoid(root='data/Planetoid', name='Cora')\n",
@@ -119,7 +116,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "mu: 0.0, reg, Accuracy: 0.1673\n",
+      "--------------------------------------------\n",
+      "mu: 0.1, reg, Accuracy: 0.1506\n",
+      "--------------------------------------------\n",
+      "mu: 0.2, reg, Accuracy: 0.0663\n",
+      "--------------------------------------------\n",
+      "mu: 0.3, reg, Accuracy: 0.1028\n",
+      "--------------------------------------------\n",
+      "mu: 0.4, reg, Accuracy: 0.1028\n",
+      "--------------------------------------------\n",
+      "mu: 0.5, reg, Accuracy: 0.3372\n",
+      "--------------------------------------------\n",
+      "mu: 0.6, reg, Accuracy: 0.3372\n",
+      "--------------------------------------------\n",
+      "mu: 0.7, reg, Accuracy: 0.3372\n",
+      "--------------------------------------------\n",
+      "mu: 0.8, reg, Accuracy: 0.3372\n",
+      "--------------------------------------------\n",
+      "mu: 0.9, reg, Accuracy: 0.3372\n",
+      "--------------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "\n",
+    "dataset = Planetoid(root='data/Planetoid', name='Cora')\n",
+    "data = dataset[0].to(device)\n",
+    "\n",
+    "for mu in range(10):\n",
+    "    mu = mu / 10\n",
+    "    torch.manual_seed(1)\n",
+    "    random.seed(1)\n",
+    "\n",
+    "    data = random_splits(data, 50, 20)\n",
+    "\n",
+    "    gcn_model = GCN0(num_node_features=dataset.num_node_features,\n",
+    "                    num_classes=dataset.num_classes) \\\n",
+    "                    .to(device)\n",
+    "\n",
+    "    gcn_model = train1(gcn_model, data, mu=mu)\n",
+    "    # gcn_model = train2(gcn_model, data)\n",
+    "    acc = evaluate0(gcn_model, data)\n",
+    "    print(f'mu: {mu}, reg, Accuracy: {acc:.4f}')\n",
+    "    print('--------------------------------------------')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -172,6 +225,13 @@
     "    print(f'mu: {mu}, reg, Accuracy: {acc:.4f}')\n",
     "    print('--------------------------------------------')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
