--- a/notebooks/2.1-saf-train2.ipynb
+++ b/notebooks/2.1-saf-train2.ipynb
@@ -41,8 +41,6 @@
     "from src.models.gcn import GCN0\n",
     "from src.models.gcn import GCN1\n",
     "\n",
-    "from src.models.train_model import train0\n",
-    "from src.models.train_model import train1\n",
     "from src.models.train_model import train2\n",
     "from src.models.train_model import random_splits\n",
     "\n",
@@ -70,29 +68,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "train size: 840\n",
+      "train size: 350\n",
       "valid size: 140\n",
-      "test size: 1728\n",
-      "mu: 0.0, reg, Accuracy: 0.1221\n",
-      "mu: 0.0, train_acc: 0.14285714285714285, val_acc: 0.122, test_acc: 0.12210648148148148\n",
+      "test size: 2218\n",
+      "mu: 0.0, train_acc: 0.14285714285714285, val_acc: 0.156, test_acc: 0.15689810640216412\n",
       "--------------------------------------------\n",
-      "mu: 0.1, reg, Accuracy: 0.0446\n",
-      "mu: 0.1, train_acc: 0.14285714285714285, val_acc: 0.072, test_acc: 0.04456018518518518\n",
-      "--------------------------------------------\n",
-      "mu: 0.2, reg, Accuracy: 0.1221\n",
-      "mu: 0.2, train_acc: 0.14285714285714285, val_acc: 0.122, test_acc: 0.12210648148148148\n",
-      "--------------------------------------------\n",
-      "mu: 0.3, reg, Accuracy: 0.1221\n",
-      "mu: 0.3, train_acc: 0.14285714285714285, val_acc: 0.122, test_acc: 0.12210648148148148\n",
-      "--------------------------------------------\n",
-      "mu: 0.4, reg, Accuracy: 0.1221\n",
-      "mu: 0.4, train_acc: 0.14285714285714285, val_acc: 0.122, test_acc: 0.12210648148148148\n",
-      "--------------------------------------------\n",
-      "mu: 0.5, reg, Accuracy: 0.1221\n",
-      "mu: 0.5, train_acc: 0.14285714285714285, val_acc: 0.122, test_acc: 0.12210648148148148\n",
-      "--------------------------------------------\n",
-      "mu: 0.6, reg, Accuracy: 0.1221\n",
-      "mu: 0.6, train_acc: 0.14285714285714285, val_acc: 0.122, test_acc: 0.12210648148148148\n",
+      "mu: 0.1, train_acc: 0.14285714285714285, val_acc: 0.072, test_acc: 0.06627592425608657\n",
       "--------------------------------------------\n"
      ]
     },
@@ -103,8 +84,8 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 12>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=15'>16</a>\u001b[0m random\u001b[39m.\u001b[39mseed(\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=17'>18</a>\u001b[0m gcn_model \u001b[39m=\u001b[39m GCN1(num_node_features\u001b[39m=\u001b[39mdataset\u001b[39m.\u001b[39mnum_node_features,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=18'>19</a>\u001b[0m                  num_classes\u001b[39m=\u001b[39mdataset\u001b[39m.\u001b[39mnum_classes) \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=19'>20</a>\u001b[0m                 \u001b[39m.\u001b[39mto(device)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=21'>22</a>\u001b[0m gcn_model \u001b[39m=\u001b[39m train2(gcn_model, data, mu\u001b[39m=\u001b[39;49mmu, num_epochs\u001b[39m=\u001b[39;49m\u001b[39m350\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=22'>23</a>\u001b[0m \u001b[39m# gcn_model = train2(gcn_model, data)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=23'>24</a>\u001b[0m acc \u001b[39m=\u001b[39m evaluate0(gcn_model, data)\n",
-      "File \u001b[0;32m~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py:86\u001b[0m, in \u001b[0;36mtrain2\u001b[0;34m(model, data, preg_mask, lr, weight_decay, num_epochs, mu)\u001b[0m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=72'>73</a>\u001b[0m     prop \u001b[39m=\u001b[39m model\u001b[39m.\u001b[39mpropagate(data, A_hat)\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=74'>75</a>\u001b[0m     loss \u001b[39m=\u001b[39m reg_loss_2(\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=75'>76</a>\u001b[0m         pred\u001b[39m=\u001b[39mpred, \u001b[39m# we make predictions on the entire dataset\u001b[39;00m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=76'>77</a>\u001b[0m         prop\u001b[39m=\u001b[39mprop,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=83'>84</a>\u001b[0m         L_preg\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m x, y: F\u001b[39m.\u001b[39mcross_entropy(x, y),\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=84'>85</a>\u001b[0m         )\n\u001b[0;32m---> <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=85'>86</a>\u001b[0m     loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=86'>87</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=88'>89</a>\u001b[0m \u001b[39mreturn\u001b[39;00m model\n",
+      "\u001b[1;32m/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 15>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=18'>19</a>\u001b[0m random\u001b[39m.\u001b[39mseed(\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=20'>21</a>\u001b[0m gcn_model \u001b[39m=\u001b[39m GCN1(num_node_features\u001b[39m=\u001b[39mdataset\u001b[39m.\u001b[39mnum_node_features,\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=21'>22</a>\u001b[0m                  num_classes\u001b[39m=\u001b[39mdataset\u001b[39m.\u001b[39mnum_classes) \\\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=22'>23</a>\u001b[0m                 \u001b[39m.\u001b[39mto(device)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=24'>25</a>\u001b[0m gcn_model \u001b[39m=\u001b[39m train2(gcn_model, data, mu\u001b[39m=\u001b[39;49mmu, num_epochs\u001b[39m=\u001b[39;49m\u001b[39m350\u001b[39;49m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=25'>26</a>\u001b[0m \u001b[39m# gcn_model = train2(gcn_model, data)\u001b[39;00m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/2.1-saf-train2.ipynb#ch0000002?line=26'>27</a>\u001b[0m acc \u001b[39m=\u001b[39m evaluate0(gcn_model, data)\n",
+      "File \u001b[0;32m~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py:40\u001b[0m, in \u001b[0;36mtrain2\u001b[0;34m(model, data, preg_mask, lr, weight_decay, num_epochs, mu)\u001b[0m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=26'>27</a>\u001b[0m     loss \u001b[39m=\u001b[39m reg_loss_2(\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=27'>28</a>\u001b[0m         pred\u001b[39m=\u001b[39mF\u001b[39m.\u001b[39msoftmax(pred, dim\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m), \u001b[39m# we make predictions on the entire dataset\u001b[39;00m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=28'>29</a>\u001b[0m         prop\u001b[39m=\u001b[39mF\u001b[39m.\u001b[39msoftmax(prop, dim\u001b[39m=\u001b[39m\u001b[39m1\u001b[39m),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=35'>36</a>\u001b[0m         L_preg\u001b[39m=\u001b[39m\u001b[39mlambda\u001b[39;00m x, y: F\u001b[39m.\u001b[39mcross_entropy(x, y),\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=36'>37</a>\u001b[0m         )\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=37'>38</a>\u001b[0m     \u001b[39m'''if epoch % 100 == 0:\u001b[39;00m\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=38'>39</a>\u001b[0m \u001b[39m        print(loss.item())'''\u001b[39;00m\n\u001b[0;32m---> <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=39'>40</a>\u001b[0m     loss\u001b[39m.\u001b[39;49mbackward()\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=40'>41</a>\u001b[0m     optimizer\u001b[39m.\u001b[39mstep()\n\u001b[1;32m     <a href='file:///~/dtu/2021-22-spring/advanced_machine_learning/p-reg/src/models/train_model.py?line=42'>43</a>\u001b[0m \u001b[39mreturn\u001b[39;00m model\n",
       "File \u001b[0;32m~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py:307\u001b[0m, in \u001b[0;36mTensor.backward\u001b[0;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=297'>298</a>\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=298'>299</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=299'>300</a>\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=300'>301</a>\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=304'>305</a>\u001b[0m         create_graph\u001b[39m=\u001b[39mcreate_graph,\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=305'>306</a>\u001b[0m         inputs\u001b[39m=\u001b[39minputs)\n\u001b[0;32m--> <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/_tensor.py?line=306'>307</a>\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs)\n",
       "File \u001b[0;32m~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/autograd/__init__.py:154\u001b[0m, in \u001b[0;36mbackward\u001b[0;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/autograd/__init__.py?line=150'>151</a>\u001b[0m \u001b[39mif\u001b[39;00m retain_graph \u001b[39mis\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/autograd/__init__.py?line=151'>152</a>\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m--> <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/autograd/__init__.py?line=153'>154</a>\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/autograd/__init__.py?line=154'>155</a>\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[1;32m    <a href='file:///~/.virtualenv/p-reg-env/lib/python3.8/site-packages/torch/autograd/__init__.py?line=155'>156</a>\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
       "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
@@ -115,8 +96,12 @@
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
     "dataset = Planetoid(root='data/Planetoid', name='Cora', transform=T.NormalizeFeatures())\n",
+    "# no normalization, using n != 0 and m!= 0 instead\n",
+    "# doesnt work, just use normalization instead\n",
+    "# dataset = Planetoid(root='data/Planetoid', name='Cora')\n",
+    "\n",
     "data = dataset[0].to(device)\n",
-    "data = random_splits(data, 120, 20)\n",
+    "data = random_splits(data, 50, 20)\n",
     "splits = data.train_mask, data.val_mask, data.test_mask\n",
     "\n",
     "print(f'train size: {data.train_mask.sum()}')\n",
@@ -136,7 +121,7 @@
     "    gcn_model = train2(gcn_model, data, mu=mu, num_epochs=350)\n",
     "    # gcn_model = train2(gcn_model, data)\n",
     "    acc = evaluate0(gcn_model, data)\n",
-    "    print(f'mu: {mu}, reg, Accuracy: {acc:.4f}')\n",
+    "    # print(f'mu: {mu}, reg, Accuracy: {acc:.4f}')\n",
     "    train_acc, val_acc, test_acc = test(gcn_model, data, splits)\n",
     "    print(f'mu: {mu}, train_acc: {train_acc}, val_acc: {val_acc}, test_acc: {test_acc}')\n",
     "    print('--------------------------------------------')"
