--- a/notebooks/4.0-saf-loss-structure.ipynb
+++ b/notebooks/4.0-saf-loss-structure.ipynb
@@ -2,9 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sandor/dtu/2021-22-spring/advanced_machine_learning\n",
+      "Obtaining file:///home/sandor/dtu/2021-22-spring/advanced_machine_learning\n",
+      "\u001b[31mERROR: file:///home/sandor/dtu/2021-22-spring/advanced_machine_learning does not appear to be a Python project: neither 'setup.py' nor 'pyproject.toml' found.\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%cd ..\n",
     "%pip install -e ."
@@ -12,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,6 +40,8 @@
     "from src.models.evaluate_model import evaluate0\n",
     "from src.models.evaluate_model import evaluate1\n",
     "\n",
+    "from src.models.reg import reg_loss\n",
+    "\n",
     "import torch\n",
     "import torch.nn.functional as F\n",
     "import matplotlib.pyplot as plt\n",
@@ -44,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,47 +92,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "TypeError",
-     "evalue": "make_preg_loss() missing 1 required positional argument: 'A_hat'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/4.0-saf-loss-structure.ipynb Cell 5'\u001b[0m in \u001b[0;36m<cell line: 1>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/4.0-saf-loss-structure.ipynb#ch0000004?line=0'>1</a>\u001b[0m l \u001b[39m=\u001b[39m make_preg_loss(L_cls, L_preg, \u001b[39m0.2\u001b[39;49m)\n",
-      "\u001b[0;31mTypeError\u001b[0m: make_preg_loss() missing 1 required positional argument: 'A_hat'"
-     ]
-    }
-   ],
-   "source": [
-    "l = make_preg_loss(L_cls, L_preg, 0.2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.x\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.tx\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.allx\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.y\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.ty\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.ally\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.graph\n",
-      "Downloading https://github.com/kimiyoung/planetoid/raw/master/data/ind.cora.test.index\n",
-      "Processing...\n",
-      "Done!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
     "\n",
@@ -135,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,14 +136,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(nan, grad_fn=<AddBackward0>)\n"
+      "tensor(2.3356, grad_fn=<AddBackward0>)\n",
+      "tensor(2.3356, grad_fn=<AddBackward0>)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_10823/777732340.py:6: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  l_cls = L_cls(F.softmax(pred[data.train_mask]), data.y[data.train_mask])\n",
+      "/tmp/ipykernel_10823/777732340.py:7: UserWarning: Implicit dimension choice for softmax has been deprecated. Change the call to include dim=X as an argument.\n",
+      "  l_preg = L_preg(F.softmax(pred[data.reg_mask]), F.softmax((A_hat@pred)[data.reg_mask]))\n"
      ]
     }
    ],
@@ -177,10 +163,17 @@
     "\n",
     "def make_preg_loss(L_cls, L_preg, mu, A_hat):\n",
     "    \"\"\"  \"\"\"\n",
-    "    def l(data, pred):\n",
-    "        l_cls = L_cls(pred[data.train_mask], data.y[data.train_mask])\n",
-    "        l_preg = L_preg(pred[data.reg_mask], (A_hat@pred)[data.reg_mask])\n",
-    "        return l_cls + mu * l_preg\n",
+    "    def l(data, Z):\n",
+    "        P = F.softmax(Z[data.train_mask], dim=1)\n",
+    "        Q = F.softmax((A_hat@Z)[data.train_mask], dim=1)\n",
+    "        Y = data.y[data.train_mask]\n",
+    "        M = data.train_mask.sum()\n",
+    "        N = data.train_mask.shape[0]\n",
+    "\n",
+    "        l_cls = L_cls(P, Y)\n",
+    "        l_preg = L_preg(P, Q)\n",
+    "\n",
+    "        return - 1 / M * l_cls + mu / N * l_preg\n",
     "    return l\n",
     "\n",
     "\n",
@@ -208,9 +201,27 @@
     "\n",
     "pred = gcn_model(data)\n",
     "comped_l = l(data, pred)\n",
+    "comped_l_old = reg_loss(\n",
+    "            pred=F.softmax(pred, dim=1),\n",
+    "            prop=F.softmax(a_hat@pred, dim=1), # \n",
+    "            target=data.y[data.train_mask], # we assume to have ground-truth labels on only a subset of the dataset\n",
+    "            train_mask=data.train_mask, # hence, we also provide the train_mask, to know what nodes have labels\n",
+    "            preg_mask=torch.ones_like(data.train_mask, dtype=torch.bool),\n",
+    "            L_cls=lambda x, y: F.nll_loss(torch.log(x), y),\n",
+    "            L_preg=lambda x, y: F.cross_entropy(x, y),\n",
+    "            mu=0.2,\n",
+    "            )\n",
     "print(comped_l)\n",
+    "print(comped_l_old)\n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
