--- a/notebooks/3.3-saf-preg-mask-ratio.ipynb
+++ b/notebooks/3.3-saf-preg-mask-ratio.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 20>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000003?line=21'>22</a>\u001b[0m torch\u001b[39m.\u001b[39mmanual_seed(\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000003?line=22'>23</a>\u001b[0m random\u001b[39m.\u001b[39mseed(\u001b[39m1\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000003?line=24'>25</a>\u001b[0m add_to_mask \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(random\u001b[39m.\u001b[39;49msample(data\u001b[39m.\u001b[39;49mtrain_mask, k\u001b[39m=\u001b[39;49mpreg_umask_mask_ratio))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000003?line=25'>26</a>\u001b[0m preg_mask \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros(\u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39my), dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mbool)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000003?line=26'>27</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m add_to_mask:\n",
+      "\u001b[1;32m/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb Cell 3'\u001b[0m in \u001b[0;36m<cell line: 20>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000002?line=21'>22</a>\u001b[0m torch\u001b[39m.\u001b[39mmanual_seed(\u001b[39m1\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000002?line=22'>23</a>\u001b[0m random\u001b[39m.\u001b[39mseed(\u001b[39m1\u001b[39m)\n\u001b[0;32m---> <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000002?line=24'>25</a>\u001b[0m add_to_mask \u001b[39m=\u001b[39m \u001b[39mset\u001b[39m(random\u001b[39m.\u001b[39;49msample(data\u001b[39m.\u001b[39;49mtrain_mask\u001b[39m.\u001b[39;49mnumpy(), k\u001b[39m=\u001b[39;49mpreg_umask_mask_ratio))\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000002?line=25'>26</a>\u001b[0m preg_mask \u001b[39m=\u001b[39m torch\u001b[39m.\u001b[39mzeros(\u001b[39mlen\u001b[39m(data\u001b[39m.\u001b[39my), dtype\u001b[39m=\u001b[39mtorch\u001b[39m.\u001b[39mbool)\n\u001b[1;32m     <a href='vscode-notebook-cell:/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg/notebooks/3.3-saf-preg-mask-ratio.ipynb#ch0000002?line=26'>27</a>\u001b[0m \u001b[39mfor\u001b[39;00m i \u001b[39min\u001b[39;00m add_to_mask:\n",
       "File \u001b[0;32m/usr/lib/python3.8/random.py:359\u001b[0m, in \u001b[0;36mRandom.sample\u001b[0;34m(self, population, k)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/random.py?line=356'>357</a>\u001b[0m     population \u001b[39m=\u001b[39m \u001b[39mtuple\u001b[39m(population)\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/random.py?line=357'>358</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39misinstance\u001b[39m(population, _Sequence):\n\u001b[0;32m--> <a href='file:///usr/lib/python3.8/random.py?line=358'>359</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mPopulation must be a sequence or set.  For dicts, use list(d).\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/random.py?line=359'>360</a>\u001b[0m randbelow \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_randbelow\n\u001b[1;32m    <a href='file:///usr/lib/python3.8/random.py?line=360'>361</a>\u001b[0m n \u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(population)\n",
       "\u001b[0;31mTypeError\u001b[0m: Population must be a sequence or set.  For dicts, use list(d)."
      ]
@@ -114,7 +114,7 @@
     "    torch.manual_seed(1)\n",
     "    random.seed(1)\n",
     "\n",
-    "    add_to_mask = set(random.sample(data.train_mask, k=preg_umask_mask_ratio))\n",
+    "    add_to_mask = set(random.sample(data.train_mask.numpy(), k=preg_umask_mask_ratio))\n",
     "    preg_mask = torch.zeros(len(data.y), dtype=torch.bool)\n",
     "    for i in add_to_mask:\n",
     "        train_mask[i] = True\n",
@@ -137,10 +137,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[False False False ... False False False]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(data.train_mask.numpy())"
+   ]
   }
  ],
  "metadata": {
