--- a/notebooks/5.0-saf-unittest-crossentropy.ipynb
+++ b/notebooks/5.0-saf-unittest-crossentropy.ipynb
@@ -2,7 +2,35 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "/home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg\n",
+      "Obtaining file:///home/sandor/dtu/2021-22-spring/advanced_machine_learning/p-reg\n",
+      "  Preparing metadata (setup.py) ... \u001b[?25ldone\n",
+      "\u001b[?25hInstalling collected packages: src\n",
+      "  Attempting uninstall: src\n",
+      "    Found existing installation: src 0.1.0\n",
+      "    Uninstalling src-0.1.0:\n",
+      "      Successfully uninstalled src-0.1.0\n",
+      "  Running setup.py develop for src\n",
+      "Successfully installed src-0.1.0\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
+   "source": [
+    "%cd ..\n",
+    "%pip install -e ."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -75,6 +103,75 @@
     "print(torch.nn.CrossEntropyLoss(reduction='sum')(P,Q))\n",
     "print(torch.nn.functional.cross_entropy(P,Q, reduction='sum'))\n",
     "print(custome_crossentropy(P,Q))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(23.9757, grad_fn=<NegBackward0>)\n",
+      "tensor(5.2695, grad_fn=<NegBackward0>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import torch\n",
+    "import torch.nn.functional as F\n",
+    "from torch_geometric.datasets import Planetoid\n",
+    "from torch_geometric.transforms import NormalizeFeatures\n",
+    "from notebooks.FinalAnalysisAbdul.models import MLP, GCN, GAT\n",
+    "from notebooks.FinalAnalysisAbdul.p_reg_loss import A_hat_computations\n",
+    "\n",
+    "\n",
+    "seed = 0\n",
+    "\n",
+    "# set up torch env and dataset\n",
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')\n",
+    "dataset = Planetoid(root=f'data/Planetoid', name='Cora', transform=NormalizeFeatures())\n",
+    "data = dataset[0].to(device)\n",
+    "\n",
+    "criterion = torch.nn.CrossEntropyLoss()\n",
+    "model = GCN(dataset, hidden_channels=16, seed = seed).to(device)\n",
+    "\n",
+    "_, Z = model(data)\n",
+    "\n",
+    "L_preg_0 = lambda x, y: - (x * torch.log(y)).sum()\n",
+    "L_preg_1 = lambda x, y: F.cross_entropy(x, y, reduction='sum')\n",
+    "\n",
+    "A_hat, A_hat_mask, N = A_hat_computations(data)\n",
+    "data.reg_mask = torch.ones_like(data.train_mask, dtype=torch.bool)\n",
+    "\n",
+    "P = F.softmax(Z, dim=1)\n",
+    "Q = F.softmax(torch.matmul(A_hat, Z), dim=1)\n",
+    "\n",
+    "print(L_preg_0((P/1000)[data.reg_mask], (Q/1000)[data.reg_mask]))\n",
+    "print(L_preg_1((P/1000)[data.reg_mask], (Q/1000)[data.reg_mask]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([2708])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.y.shape"
    ]
   }
  ],
