--- a/notebooks/5.3-saf-replicating-abdul.ipynb
+++ b/notebooks/5.3-saf-replicating-abdul.ipynb
@@ -98,97 +98,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# hyperparams\n",
-    "\n",
-    "epochs = 200\n",
-    "reg_loss = 'p_reg'\n",
-    "phi = 'cross_entropy'\n",
-    "train_mask, val_mask, test_mask = data.train_mask, data.val_mask, data.test_mask\n",
     "A_hat, A_hat_mask, N = A_hat_computations(data)\n",
     "\n",
     "data.reg_mask = torch.ones_like(data.train_mask, dtype=torch.bool)\n",
     "\n",
     "L_cls = lambda x, y: F.cross_entropy(x, y, reduction='sum')\n",
-    "# L_cls = lambda x, y: - (x * torch.log(y)).sum()\n",
-    "L_preg = lambda x, y: - (x * torch.log(y)).sum()\n",
-    "L_preg_alt = lambda x, y: F.cross_entropy(x, y, reduction='sum')\n"
+    "L_preg = lambda x, y: - (x * torch.log(y)).sum()\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "def p_reg_loss(Z, A_hat,  A_hat_mask, N):\n",
-    "    \"\"\"\n",
-    "    See section 2 from \n",
-    "    Rethinking Graph Regularization for Graph Neural Networks\n",
-    "    \"\"\"\n",
-    "    Z = Z[ A_hat_mask, :]\n",
-    "    Z_prime = torch.matmul(A_hat, Z)\n",
-    "\n",
-    "    # have a look at the table before eq (2) and appendix A\n",
-    "    P = torch.softmax(Z, dim=1)\n",
-    "    Q = torch.softmax(Z_prime, dim=1)\n",
-    "    phi = - (P * torch.log(Q)).sum()\n",
-    "\n",
-    "    return (1/N) * phi\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor(1.5561, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.0, 'train_acc': 0.7142857142857143, 'val_acc': 0.514, 'test_acc': 0.487}\n",
-      "tensor(1.8414, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.1, 'train_acc': 0.42857142857142855, 'val_acc': 0.444, 'test_acc': 0.448}\n",
-      "tensor(1.9665, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.2, 'train_acc': 0.2785714285714286, 'val_acc': 0.346, 'test_acc': 0.345}\n",
-      "tensor(2.0247, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.3, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0252, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.4, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0258, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.5, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0264, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.6, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0270, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.7, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0276, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.8, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0284, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 0.9, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n",
-      "tensor(2.0291, grad_fn=<AddBackward0>)\n",
-      "----\n",
-      "----\n",
-      "{'mu': 1.0, 'train_acc': 0.14285714285714285, 'val_acc': 0.058, 'test_acc': 0.064}\n"
+      "{'mu': 0.0, 'train_acc': 0.9857142857142858, 'val_acc': 0.798, 'test_acc': 0.801}\n",
+      "{'mu': 0.1, 'train_acc': 0.9857142857142858, 'val_acc': 0.804, 'test_acc': 0.813}\n",
+      "{'mu': 0.2, 'train_acc': 0.9928571428571429, 'val_acc': 0.818, 'test_acc': 0.825}\n",
+      "{'mu': 0.3, 'train_acc': 0.9928571428571429, 'val_acc': 0.812, 'test_acc': 0.827}\n",
+      "{'mu': 0.4, 'train_acc': 0.9857142857142858, 'val_acc': 0.814, 'test_acc': 0.823}\n",
+      "{'mu': 0.5, 'train_acc': 0.9785714285714285, 'val_acc': 0.812, 'test_acc': 0.83}\n",
+      "{'mu': 0.6, 'train_acc': 0.9785714285714285, 'val_acc': 0.788, 'test_acc': 0.823}\n",
+      "{'mu': 0.7, 'train_acc': 0.9714285714285714, 'val_acc': 0.75, 'test_acc': 0.764}\n",
+      "{'mu': 0.8, 'train_acc': 0.9642857142857143, 'val_acc': 0.712, 'test_acc': 0.715}\n",
+      "{'mu': 0.9, 'train_acc': 0.9642857142857143, 'val_acc': 0.666, 'test_acc': 0.691}\n",
+      "{'mu': 1.0, 'train_acc': 0.8928571428571429, 'val_acc': 0.482, 'test_acc': 0.463}\n"
      ]
     }
    ],
@@ -202,32 +139,11 @@
     "    \n",
     "    mu = mu / 10\n",
     "    loss_fn = make_preg_loss(L_cls, L_preg, mu, A_hat)\n",
-    "    loss_fn_alt = make_preg_loss(L_cls, L_preg_alt, mu, A_hat)\n",
     "        \n",
     "    model = GCN1(dataset.num_node_features, dataset.num_classes)\n",
-    "    '''print(loss_fn(data, model(data)))\n",
-    "    print(loss_fn_alt(data, model(data)))\n",
-    "    print('----')'''\n",
-    "    \n",
     "\n",
     "    model = train_with_loss(model, data, loss_fn, lr=0.01, weight_decay=5e-4, num_epochs=200, beta=0.01)\n",
-    "    print(loss_fn(data, model(data)))\n",
-    "    #print(loss_fn_alt(data, model(data)))\n",
-    "    print('----\\n----')\n",
-    "    '''\n",
-    "    optimizer = torch.optim.Adam(model.parameters(), lr=0.01, weight_decay=5e-4)\n",
     "\n",
-    "\n",
-    "    model.train()\n",
-    "    for epoch in range(epochs):\n",
-    "        optimizer.zero_grad()\n",
-    "        _, Z = model(data)\n",
-    "\n",
-    "        loss = loss_fn(data, Z)\n",
-    "        \n",
-    "        loss.backward()\n",
-    "        optimizer.step()\n",
-    "    '''    \n",
     "    train_acc, val_acc, test_acc = evaluate1(model, data)\n",
     "    metrics.append({'mu': mu, 'train_acc': train_acc, 'val_acc': val_acc, 'test_acc': test_acc})\n",
     "    print(metrics[-1])\n",
@@ -236,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
