--- a/notebooks/6.2-saf-fig2c.ipynb
+++ b/notebooks/6.2-saf-fig2c.ipynb
@@ -30,17 +30,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ATTENTION!!! MODIFIED P TO Z IN SOME PARTS OF MAKE_PREG_LOSS!!!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import random\n",
     "\n",
@@ -56,9 +48,8 @@
     "from src.models.train_model import train_with_loss\n",
     "from src.models.train_model import random_splits\n",
     "\n",
-    "from src.models.reg import make_preg_loss\n",
-    "from src.models.reg import make_lap_loss\n",
-    "from src.models.reg import make_lap_loss_alt\n",
+    "from src.models.reg import make_preg_ce_ce\n",
+    "from src.models.reg import make_lap_loss_ce\n",
     "\n",
     "from src.models.reg import compute_a_hat\n",
     "\n",
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,15 +83,12 @@
     "A_hat = compute_a_hat(data)\n",
     "\n",
     "# data = random_splits(data, 50, 20)\n",
-    "data.reg_mask = torch.ones_like(data.train_mask, dtype=torch.bool)\n",
-    "\n",
-    "L_cls = lambda x, y: F.cross_entropy(x, y, reduction='sum')\n",
-    "L_preg = lambda x, y: - (x * torch.log(y)).sum()\n"
+    "data.reg_mask = torch.ones_like(data.train_mask, dtype=torch.bool)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -114,22 +102,22 @@
       "-------------------------------------------------------------\n",
       "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.0, 'train_acc': 0.9857, 'val_acc': 0.798, 'test_acc': 0.801}\n",
       "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.1, 'train_acc': 0.9857, 'val_acc': 0.678, 'test_acc': 0.696}\n",
-      "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.2, 'train_acc': 0.9786, 'val_acc': 0.648, 'test_acc': 0.656}\n",
-      "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.3, 'train_acc': 0.9714, 'val_acc': 0.656, 'test_acc': 0.655}\n",
-      "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.4, 'train_acc': 0.9714, 'val_acc': 0.63, 'test_acc': 0.636}\n",
+      "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.2, 'train_acc': 0.9786, 'val_acc': 0.648, 'test_acc': 0.658}\n",
+      "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.3, 'train_acc': 0.9714, 'val_acc': 0.652, 'test_acc': 0.656}\n",
+      "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.4, 'train_acc': 0.9714, 'val_acc': 0.63, 'test_acc': 0.635}\n",
       "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.5, 'train_acc': 0.9714, 'val_acc': 0.63, 'test_acc': 0.626}\n",
       "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.6, 'train_acc': 0.9643, 'val_acc': 0.618, 'test_acc': 0.618}\n",
       "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.7, 'train_acc': 0.9643, 'val_acc': 0.584, 'test_acc': 0.597}\n",
       "{'model': 'gcn', 'reg': 'lap_loss', 'mu': 0.8, 'train_acc': 0.9643, 'val_acc': 0.562, 'test_acc': 0.57}\n",
       "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.0, 'train_acc': 0.9929, 'val_acc': 0.796, 'test_acc': 0.81}\n",
-      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.1, 'train_acc': 0.9857, 'val_acc': 0.772, 'test_acc': 0.774}\n",
-      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.2, 'train_acc': 0.9857, 'val_acc': 0.784, 'test_acc': 0.773}\n",
-      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.3, 'train_acc': 0.9714, 'val_acc': 0.764, 'test_acc': 0.766}\n",
+      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.1, 'train_acc': 0.9857, 'val_acc': 0.772, 'test_acc': 0.767}\n",
+      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.2, 'train_acc': 0.9857, 'val_acc': 0.778, 'test_acc': 0.771}\n",
+      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.3, 'train_acc': 0.9714, 'val_acc': 0.76, 'test_acc': 0.766}\n",
       "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.4, 'train_acc': 0.9714, 'val_acc': 0.754, 'test_acc': 0.764}\n",
-      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.5, 'train_acc': 0.9714, 'val_acc': 0.75, 'test_acc': 0.757}\n",
+      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.5, 'train_acc': 0.9714, 'val_acc': 0.75, 'test_acc': 0.758}\n",
       "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.6, 'train_acc': 0.9714, 'val_acc': 0.744, 'test_acc': 0.742}\n",
-      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.7, 'train_acc': 0.9643, 'val_acc': 0.752, 'test_acc': 0.739}\n",
-      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.8, 'train_acc': 0.9643, 'val_acc': 0.76, 'test_acc': 0.743}\n",
+      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.7, 'train_acc': 0.9643, 'val_acc': 0.75, 'test_acc': 0.739}\n",
+      "{'model': 'gat', 'reg': 'lap_loss', 'mu': 0.8, 'train_acc': 0.9643, 'val_acc': 0.75, 'test_acc': 0.738}\n",
       "{'model': 'gcn', 'reg': 'preg_loss', 'mu': 0.0, 'train_acc': 0.9857, 'val_acc': 0.798, 'test_acc': 0.801}\n",
       "{'model': 'gcn', 'reg': 'preg_loss', 'mu': 0.1, 'train_acc': 0.9857, 'val_acc': 0.804, 'test_acc': 0.813}\n",
       "{'model': 'gcn', 'reg': 'preg_loss', 'mu': 0.2, 'train_acc': 0.9929, 'val_acc': 0.818, 'test_acc': 0.825}\n",
@@ -169,9 +157,9 @@
     "            mu = mu / 10\n",
     "\n",
     "            if loss_fn_name == 'lap_loss':\n",
-    "                loss_fn = make_lap_loss_alt(L_cls, mu)\n",
+    "                loss_fn = make_lap_loss_ce(mu)\n",
     "            elif loss_fn_name == 'preg_loss':\n",
-    "                loss_fn = make_preg_loss(L_cls, L_preg, mu, A_hat)\n",
+    "                loss_fn = make_preg_ce_ce(mu, A_hat)\n",
     "            else:\n",
     "                raise(Exception('Not Implemented'))\n",
     "            \n",
