--- a/notebooks/6.3-saf-figure4a.ipynb
+++ b/notebooks/6.3-saf-figure4a.ipynb
@@ -44,6 +44,7 @@
     "from src.models.dense import NN0\n",
     "from src.models.dense import NN1\n",
     "from src.models.gcn import GCN1\n",
+    "from src.models.gcn import GCN_fix_2layer\n",
     "from src.models.gat import GAT\n",
     "\n",
     "from src.models.train_model import train_with_loss\n",
