--- a/notebooks/6.0-saf-fig2a.ipynb
+++ b/notebooks/6.0-saf-fig2a.ipynb
@@ -163,6 +163,7 @@
    ],
    "source": [
     "df = pd.DataFrame(metrics)\n",
+    "df.to_csv('reports/figures/fig2a.csv')\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "filt = (df1['model'] == 'gcn')\n",
@@ -264,6 +265,7 @@
    ],
    "source": [
     "df1 = pd.DataFrame(metrics)\n",
+    "df1.to_csv('reports/figures/fig2a.csv')\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "filt = (df1['model'] == 'gcn')\n",
