--- a/notebooks/6.2-saf-fig2c.ipynb
+++ b/notebooks/6.2-saf-fig2c.ipynb
@@ -204,6 +204,7 @@
    ],
    "source": [
     "df = pd.DataFrame(metrics)\n",
+    "df.to_csv('reports/figures/fig2c.csv')\n",
     "fig, ax = plt.subplots()\n",
     "\n",
     "filt = (df['model'] == 'gcn') & (df['reg'] == 'preg_loss')\n",
