--- a/notebooks/5.4-saf-fig-different-implementations.ipynb
+++ b/notebooks/5.4-saf-fig-different-implementations.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -105,28 +105,28 @@
       "{'loss_fn_factory': 'cece', 'mu': 0.8, 'train_acc': 0.9571, 'val_acc': 0.518, 'test_acc': 0.521}\n",
       "{'loss_fn_factory': 'cece', 'mu': 0.9, 'train_acc': 0.9286, 'val_acc': 0.466, 'test_acc': 0.463}\n",
       "{'loss_fn_factory': 'cece', 'mu': 1.0, 'train_acc': 0.8929, 'val_acc': 0.41, 'test_acc': 0.411}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0, 'train_acc': 1.0, 'val_acc': 0.784, 'test_acc': 0.8}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.1, 'train_acc': 1.0, 'val_acc': 0.794, 'test_acc': 0.817}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.2, 'train_acc': 0.9929, 'val_acc': 0.802, 'test_acc': 0.822}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.3, 'train_acc': 0.9929, 'val_acc': 0.802, 'test_acc': 0.821}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.4, 'train_acc': 0.9929, 'val_acc': 0.806, 'test_acc': 0.819}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.5, 'train_acc': 0.9929, 'val_acc': 0.806, 'test_acc': 0.821}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.6, 'train_acc': 0.9929, 'val_acc': 0.802, 'test_acc': 0.821}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.7, 'train_acc': 0.9929, 'val_acc': 0.724, 'test_acc': 0.768}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.8, 'train_acc': 0.9571, 'val_acc': 0.518, 'test_acc': 0.521}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 0.9, 'train_acc': 0.9286, 'val_acc': 0.466, 'test_acc': 0.463}\n",
-      "{'loss_fn_factory': 'cecealt', 'mu': 1.0, 'train_acc': 0.8929, 'val_acc': 0.41, 'test_acc': 0.411}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0, 'train_acc': 1.0, 'val_acc': 0.784, 'test_acc': 0.8}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.1, 'train_acc': 1.0, 'val_acc': 0.794, 'test_acc': 0.817}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.2, 'train_acc': 0.9929, 'val_acc': 0.802, 'test_acc': 0.822}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.3, 'train_acc': 0.9929, 'val_acc': 0.802, 'test_acc': 0.821}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.4, 'train_acc': 0.9929, 'val_acc': 0.806, 'test_acc': 0.819}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.5, 'train_acc': 0.9929, 'val_acc': 0.806, 'test_acc': 0.821}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.6, 'train_acc': 0.9929, 'val_acc': 0.802, 'test_acc': 0.821}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.7, 'train_acc': 0.9929, 'val_acc': 0.724, 'test_acc': 0.768}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.8, 'train_acc': 0.9571, 'val_acc': 0.518, 'test_acc': 0.521}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 0.9, 'train_acc': 0.9286, 'val_acc': 0.466, 'test_acc': 0.463}\n",
-      "{'loss_fn_factory': 'abduls', 'mu': 1.0, 'train_acc': 0.8929, 'val_acc': 0.41, 'test_acc': 0.411}\n"
+      "{'loss_fn_factory': 'cecealt', 'mu': 0, 'train_acc': 1.0, 'val_acc': 0.796, 'test_acc': 0.803}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.1, 'train_acc': 1.0, 'val_acc': 0.788, 'test_acc': 0.815}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.2, 'train_acc': 0.9929, 'val_acc': 0.804, 'test_acc': 0.829}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.3, 'train_acc': 0.9929, 'val_acc': 0.796, 'test_acc': 0.824}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.4, 'train_acc': 1.0, 'val_acc': 0.806, 'test_acc': 0.822}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.5, 'train_acc': 0.9929, 'val_acc': 0.794, 'test_acc': 0.82}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.6, 'train_acc': 0.9786, 'val_acc': 0.804, 'test_acc': 0.824}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.7, 'train_acc': 0.9786, 'val_acc': 0.798, 'test_acc': 0.818}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.8, 'train_acc': 0.9786, 'val_acc': 0.768, 'test_acc': 0.799}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 0.9, 'train_acc': 0.95, 'val_acc': 0.648, 'test_acc': 0.651}\n",
+      "{'loss_fn_factory': 'cecealt', 'mu': 1.0, 'train_acc': 0.9071, 'val_acc': 0.536, 'test_acc': 0.542}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0, 'train_acc': 1.0, 'val_acc': 0.788, 'test_acc': 0.807}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.1, 'train_acc': 0.9929, 'val_acc': 0.804, 'test_acc': 0.817}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.2, 'train_acc': 1.0, 'val_acc': 0.806, 'test_acc': 0.815}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.3, 'train_acc': 0.9929, 'val_acc': 0.816, 'test_acc': 0.824}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.4, 'train_acc': 1.0, 'val_acc': 0.802, 'test_acc': 0.824}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.5, 'train_acc': 0.9786, 'val_acc': 0.794, 'test_acc': 0.827}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.6, 'train_acc': 0.9714, 'val_acc': 0.798, 'test_acc': 0.831}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.7, 'train_acc': 0.9786, 'val_acc': 0.752, 'test_acc': 0.766}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.8, 'train_acc': 0.9857, 'val_acc': 0.718, 'test_acc': 0.738}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 0.9, 'train_acc': 0.9857, 'val_acc': 0.75, 'test_acc': 0.757}\n",
+      "{'loss_fn_factory': 'abduls', 'mu': 1.0, 'train_acc': 0.9357, 'val_acc': 0.472, 'test_acc': 0.491}\n"
      ]
     }
    ],
@@ -139,7 +139,7 @@
     "\n",
     "metrics = []\n",
     "\n",
-    "for mu in [0,.1,.2,.3,.4,.5,.6,.7,.8,.9,1.]:\n",
+    "for mu in [0, .1, .2, .3, .4, .5, .6, .7, .8, .9, 1.]:\n",
     "    torch.manual_seed(1)\n",
     "    random.seed(1)\n",
     "\n",
@@ -154,8 +154,8 @@
     "    print(metrics[-1])\n",
     "\n",
     "for mu in [0,.1,.2,.3,.4,.5,.6,.7,.8,.9,1.]:\n",
-    "    torch.manual_seed(1)\n",
-    "    random.seed(1)\n",
+    "    # torch.manual_seed(1)\n",
+    "    # random.seed(1)\n",
     "\n",
     "    loss_fn = make_preg_ce_ce_alt(mu, A_hat)\n",
     "    \n",
@@ -168,8 +168,8 @@
     "    print(metrics[-1])\n",
     "\n",
     "for mu in [0,.1,.2,.3,.4,.5,.6,.7,.8,.9,1.]:\n",
-    "    torch.manual_seed(1)\n",
-    "    random.seed(1)\n",
+    "    # torch.manual_seed(1)\n",
+    "    # random.seed(1)\n",
     "\n",
     "    loss_fn = make_abduls_preg_loss(mu, A_hat)\n",
     "    \n",
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
